code alignmnet fixed

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,33 +4,50 @@
     padding: 0;
 }
 
-html{
-    min-height:100vh;
+html,
+body {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
 }
 
 body {
-    height:100%;
-    width:100%;
     font-family: Arial, sans-serif;
     color: white;
     text-align: center;
 }
 
-
 .video-background-container {
+    position: fixed;
+    /* Keep it in the background */
     width: 100%;
-    min-height: 100vh; 
+    height: 100vh;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    z-index: -1;
 }
-
 
 .background-video {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    min-height: 100vh;
-    object-fit:fill;
-    z-index: -1;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
+}
+
+.content {
+    position: relative;
+    z-index: 1;
+    background: rgba(47, 42, 42, 0.4);
+    color: white;
+    text-align: center;
+    padding: 50px 10px;
+    margin: 48px;
 }
 
 .section {
@@ -40,6 +57,9 @@ body {
     gap: 20px;
     font-size: 1.5rem;
     margin-top: 30px;
+    position: relative;
+    z-index: 1;
+    min-height: 150vh;
 }
 
 .search_song_by_any_artist,
@@ -85,7 +105,7 @@ button:hover {
     gap: 20px;
     padding: 20px;
     width: 90%;
-    margin: auto;
+    margin: 16px;
 }
 
 .artist,
